Fix the background not appearing on mobiles

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -18,6 +18,5 @@ body {
   background-image: url('../images/patgpibgray.jpg');
   background-repeat: repeat;
   background-position: top left;
-  background-attachment: fixed;
+  background-attachment: scroll;
 }
-
